name:                RParsing
version:             0.1.0.0
synopsis:            Various experiments with parsing and semantic analysis
description:         Various experiments with parsing and semantic analysis
homepage:            https://github.com/rossng/RParsing
license:             BSD3
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           2016 Ross Gardiner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Liveness
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable parsing-and-analysis-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , RParsing
  default-language:    Haskell2010

test-suite parsing-and-analysis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , RParsing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/RParsing
